--- a/TiendaServicios.Api.Autor/appsettings.json
+++ b/TiendaServicios.Api.Autor/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ConexionDatabase": "Server=localhost;Database=tiendalibroautor;Port=5432;User Id=postgres;Password=VAxiDrez$"
+  }
 }
