Comunicacion entre Microservices

--- a/TiendaServicios.Api.CarritoCompra/appsettings.json
+++ b/TiendaServicios.Api.CarritoCompra/appsettings.json
@@ -8,5 +8,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ConexionDB": "Server=localhost,1433;Database=carritocompra;User Id=sa;Password=VaxiDrez$"
+  },
+  "Services": {
+    "Libros": "https://localhost:7107/",
+    "Autores": "https://localhost:7299/"
   }
 }
