--- a/TiendaServicios.Api.CarritoCompra/appsettings.json
+++ b/TiendaServicios.Api.CarritoCompra/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ConexionDB": "Server=localhost,1433;Database=carritocompra;User Id=sa;Password=VaxiDrez$"
+    "ConexionDB": "Server=430883c1f84c,1433;Database=carritocompra;User Id=sa;Password=VaxiDrez$"
   },
   "Services": {
     "Libros": "https://localhost:7107/",
