--- a/TiendaServicios.Api.Libro/appsettings.json
+++ b/TiendaServicios.Api.Libro/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ConexionDB": "Server=localhost,1433;Database=tiendalibro;User Id=sa;Password=VaxiDrez$"
+    "ConexionDB": "Server=430883c1f84c,1433;Database=tiendalibro;User Id=sa;Password=VaxiDrez$"
   }
 }
