--- a/TiendaServicios.Api.Autor/appsettings.json
+++ b/TiendaServicios.Api.Autor/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ConexionDatabase": "Server=localhost;Database=tiendalibroautor;Port=5432;User Id=postgres;Password=VAxiDrez$"
+    "ConexionDatabase": "Server=postgres-vaxi;Database=tiendalibroautor;Port=5432;User Id=postgres;Password=VAxiDrez$"
   }
 }
