--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -31,6 +31,7 @@ services:
   tiendaservicos.api.gateway:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
+      - Services__Autor=http://tiendaservicos.api.gateway
     depends_on:
       - tiendaservicios.api.libro
     ports:
